--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Epic Task</title>
+    <title>Epic task</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
 
   <body>
@@ -54,11 +51,10 @@
                 <li><a class="dropdown-item" href="#">Pendentes</a></li>
                 <li><a class="dropdown-item" href="#">Concluidas</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Cadastrar</a></li>
+                <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Cadastrar</a></li>
               </ul>
             </li>
           </ul>
-
           <form class="d-flex" role="search">
             <input
               class="form-control me-2"
@@ -74,128 +70,35 @@
       </div>
     </nav>
 
-    <div class="container mt-3">
-
-            <!-- Button trigger modal -->
+    <div class="container mt-3"> 
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <i class="bi bi-plus"></i>
-            Cadastrar tarefa
+            Cadastrar Tarefa
         </button>
 
-        <div class="row mt-3">
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                  <div class="card-header">Estudar para o SO</div>
-                  <div class="card-body">
-                    <p class="card-text">Fazer os exercicios para fixar</p>
-                    <p>
-                      <span class="badge text-bg-danger">estudos</span>
-                    </p>
-                    <a href="#" class="btn btn-success" title="Marcar como concluida">
-                      <i class="bi bi-check-lg"></i>
-                      Finalizar
-                    </a>
-                    <a href="#" class="btn btn-danger" title="Apagar Tarefa">
-                      <i class="bi bi-trash"></i>
-                      Apagar
-                    </a>
-                  </div>
-                </div> <!-- Fechamento do card -->
-            </div> <!-- Coluna-->
+        <div class="row mt-3 " id="tarefas">
+
+
+
             
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                  <div class="card-header">Estudar para o CP</div>
-                  <div class="card-body">
-                    <p class="card-text">Fazer os exercicios para fixar</p>
-                    <p>
-                      <span class="badge text-bg-danger">estudos</span>
-                    </p>
-                    <a href="#" class="btn btn-success" title="Marcar como concluida">
-                      <i class="bi bi-check-lg"></i>
-                      Finalizar
-                    </a>
-                    <a href="#" class="btn btn-danger" title="Apagar Tarefa">
-                      <i class="bi bi-trash"></i>
-                      Apagar
-                    </a>
-                  </div> 
-                </div> <!-- Fechamento do card -->
-            </div> <!-- Coluna -->
-
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                  <div class="card-header">Estudar para o CP</div>
-                  <div class="card-body">
-                    <p class="card-text">Fazer os exercicios para fixar</p>
-                    <p>
-                      <span class="badge text-bg-danger">estudos</span>
-                    </p>
-                    <a href="#" class="btn btn-success" title="Marcar como concluida">
-                      <i class="bi bi-check-lg"></i>
-                      Finalizar
-                    </a>
-                    <a href="#" class="btn btn-danger" title="Apagar Tarefa">
-                      <i class="bi bi-trash"></i>
-                      Apagar
-                    </a>
-                  </div> 
-                </div> <!-- Fechamento do card -->
-            </div> <!-- Coluna -->
-
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                  <div class="card-header">Estudar para o CP</div>
-                  <div class="card-body">
-                    <p class="card-text">Fazer os exercicios para fixar</p>
-                    <p>
-                      <span class="badge text-bg-danger">estudos</span>
-                    </p>
-                    <a href="#" class="btn btn-success" title="Marcar como concluida">
-                      <i class="bi bi-check-lg"></i>
-                      Finalizar
-                    </a>
-                    <a href="#" class="btn btn-danger" title="Apagar Tarefa">
-                      <i class="bi bi-trash"></i>
-                      Apagar
-                    </a>
-                  </div> 
-                </div> <!-- Fechamento do card -->
-            </div> <!-- Coluna -->
-
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                  <div class="card-header">Estudar para o CP</div>
-                  <div class="card-body">
-                    <p class="card-text">Fazer os exercicios para fixar</p>
-                    <p>
-                      <span class="badge text-bg-danger">estudos</span>
-                    </p>
-                    <a href="#" class="btn btn-success" title="Marcar como concluida">
-                      <i class="bi bi-check-lg"></i>
-                      Finalizar
-                    </a>
-                    <a href="#" class="btn btn-danger" title="Apagar Tarefa">
-                      <i class="bi bi-trash"></i>
-                      Apagar
-                    </a>
-                  </div> 
-                </div> <!-- Fechamento do card -->
-            </div> <!-- Coluna -->
-
-        </div> <!-- Fechamento do ROW -->
-    </div> <!-- Fechamento do container -->
+        </div>
+    </div> <!-- fechamento do contanier-->
 
 
+
+
+   
+  
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastrar Tarefa</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastrar tarefa</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+
             <form>
                 <div class="mb-3">
                   <label for="titulo" class="form-label">Titulo</label>
@@ -206,18 +109,19 @@
                   <input type="text" class="form-control" id="descricao">
                 </div>
                 <div class="mb-3">
-                    <select class="form-select" aria-label="categoria">
-                        <option selected>Selecione a categoria</option>
-                        <option value="1">Estudos</option>
-                        <option value="2">Trabalho</option>
-                        <option value="3">Pessoal</option>
+                    <select class="form-select" aria-label="Categoria" id="categoria">
+                        <option selected>Selecione uma categoria</option>
+                        <option>Estudos</option>
+                        <option>Trabalho</option>
+                        <option>Pessoal</option>
                       </select>
                 </div>
               </form>
+          
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary">Salvar</button>
+          <button id="salvar" type="button" class="btn btn-primary">Salvar</button>
         </div>
       </div>
     </div>
@@ -228,5 +132,6 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="./crud.js"></script>
   </body>
 </html>
