--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               type="search"
               placeholder="Buscar"
               aria-label="Buscar"
+              id="busca"
             />
             <button class="btn btn-outline-success" type="submit">
               Buscar
